--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "allowSyntheticDefaultImports": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "isolatedModules": true
+        "isolatedModules": true,
+        "declaration": true
     },
     "files": [
         "src/index.ts"
